# InstaPPT

./: .gitattributes  .gitignore  README.md  README_CN.md  debug_schema.py  glossary_demo.md  main.py  pyproject.toml  requirements.txt  start_ui.py
.github/workflows/: publish.yml
examples/: evaluation_report.md  generate_report.py  merged.md
src/instappt/: __init__.py  _version.py  cli.py  core.py  models.py  prompts.py  ui.py  utils.py
tests/: test_mock_pipeline.py  test_pdf_merge.py
